test/visibility/except/operatorsExceptions/exceptAddition.good
exceptAddition.chpl:6: In function 'main':
exceptAddition.chpl:9: error: unresolved call '+(owned Foo, owned Foo)'
$CHPL_HOME/modules/internal/String.chpl:nnnn: note: this candidate did not match: +(x: bufferType, y: byteIndex)
exceptAddition.chpl:9: note: because actual argument #1 with type 'owned Foo'
$CHPL_HOME/modules/internal/String.chpl:nnnn: note: is passed to formal 'x: c_ptr(uint(8))'
exceptAddition.chpl:9: note: other candidates are:
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:   +(a: uint(64), b: int(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:   +(a: int(64), b: uint(64))
note: and 95 other candidates, use --print-all-candidates to see them
